chore: adding OAuth2 Authorization to Swagger
