# internal/docs/swagger.yaml
@@ -57,6 +57,8 @@ paths:
             items:
               $ref: '#/definitions/dto.Task'
             type: array
+      security:
+      - OAuth2Keycloak: []
       summary: get a list of tasks
       tags:
       - tasks
@@ -78,6 +80,8 @@ paths:
           description: Created
           schema:
             $ref: '#/definitions/dto.Task'
+      security:
+      - OAuth2Keycloak: []
       summary: insert a task
       tags:
       - tasks
@@ -93,6 +97,8 @@ paths:
       responses:
         "204":
           description: No Content
+      security:
+      - OAuth2Keycloak: []
       summary: delete a task
       tags:
       - tasks
@@ -111,6 +117,8 @@ paths:
           description: OK
           schema:
             $ref: '#/definitions/dto.Task'
+      security:
+      - OAuth2Keycloak: []
       summary: get a task
       tags:
       - tasks
@@ -135,7 +143,15 @@ paths:
           description: OK
           schema:
             $ref: '#/definitions/dto.Task'
+      security:
+      - OAuth2Keycloak: []
       summary: update a task
       tags:
       - tasks
+securityDefinitions:
+  OAuth2Keycloak:
+    authorizationUrl: http://localhost:8081/realms/myrealm/protocol/openid-connect/auth
+    flow: accessCode
+    tokenUrl: http://localhost:8081/realms/myrealm/protocol/openid-connect/token
+    type: oauth2
 swagger: "2.0"
